--- a/students/linov_mykhailo/02_html/about-me/about.html
+++ b/students/linov_mykhailo/02_html/about-me/about.html
@@ -9,15 +9,17 @@
 
 <body>
     <header>
-        <a href="../work-experience/work.html">Work Experience</a>
-        <a href="../education/education.html">Education</a>
-        <a href="../skills/skills.html">Skills</a>
-        <a href="https://www.linkedin.com/in/mlinov/">LinkedIn</a>
-        <a href="https://www.facebook.com/michael.linov">Facebook</a>
-        <a href="about.html">About me</a>
+        <nav>
+            <a href="work-experience/work.html">Work Experience</a>
+            <a href="education/education.html">Education</a>
+            <a href="skills/skills.html">Skills</a>
+            <a href="https://www.linkedin.com/in/mlinov/" target="_blank">LinkedIn</a>
+            <a href="https://www.facebook.com/michael.linov" target="_blank">Facebook</a>
+            <a href="about-me/about.html">About me</a>
+        </nav>
     </header>
     <main>
-        <h2>Hello there!</h2>
+        <h1>Hello there!</h1>
         <p>My name is Mykhailo Linov, and I am a junior Front-End Developer!</p>
         <img src="images/mlinov.jpg" alt="a photo of a young man" height="500" width="500">
         <p>I am fascinated by web development and decided to switch my career to become a software engeneer myself.</p>
