--- a/students/linov_mykhailo/02_html/skills/skills.html
+++ b/students/linov_mykhailo/02_html/skills/skills.html
@@ -9,14 +9,16 @@
 
 <body>
     <header>
-        <a href="../work-experience/work.html">Work Experience</a>
-        <a href="../education/education.html">Education</a>
-        <a href="skills.html">Skills</a>
-        <a href="https://www.linkedin.com/in/mlinov/">LinkedIn</a>
-        <a href="https://www.facebook.com/michael.linov">Facebook</a>
-        <a href="../about-me/about.html">About me</a>
+        <nav>
+            <a href="work-experience/work.html">Work Experience</a>
+            <a href="education/education.html">Education</a>
+            <a href="skills/skills.html">Skills</a>
+            <a href="https://www.linkedin.com/in/mlinov/" target="_blank">LinkedIn</a>
+            <a href="https://www.facebook.com/michael.linov" target="_blank">Facebook</a>
+            <a href="about-me/about.html">About me</a>
+        </nav>
     </header>
-    <h2><i>Skills</i></h2>
+    <h1><i>Skills</i></h1>
     <ul>
         <li>Supply Chain</li>
         <li>Logistics</li>
