--- a/students/linov_mykhailo/02_html/work-experience/work.html
+++ b/students/linov_mykhailo/02_html/work-experience/work.html
@@ -9,15 +9,17 @@
 
 <body>
     <header>
-        <a href="work.html">Work Experience</a>
-        <a href="../education/education.html">Education</a>
-        <a href="../skills/skills.html">Skills</a>
-        <a href="https://www.linkedin.com/in/mlinov/">LinkedIn</a>
-        <a href="https://www.facebook.com/michael.linov">Facebook</a>
-        <a href="../about-me/about.html">About me</a>
+        <nav>
+            <a href="work-experience/work.html">Work Experience</a>
+            <a href="education/education.html">Education</a>
+            <a href="skills/skills.html">Skills</a>
+            <a href="https://www.linkedin.com/in/mlinov/" target="_blank">LinkedIn</a>
+            <a href="https://www.facebook.com/michael.linov" target="_blank">Facebook</a>
+            <a href="about-me/about.html">About me</a>
+        </nav>
     </header>
-    <h2><i>Work Experience</i></h2>
-    <h3>DSV Air & Sea</h3>
+    <h1><i>Work Experience</i></h1>
+    <h2>DSV Air & Sea</h2>
     <p>Indianapolis, IN</p>
     <p><b>September 2022 - May 2023</b></p>
     <p><em>Freight Forwarder</em></p>
@@ -31,7 +33,7 @@
         <li>Handled accounting processes accurately and in a timely manner</li>
         <li>Assisted customers with questions, complaints, requests, tracking and tracing of their shipments</li>
     </ul>
-    <h3>Nissin International Transport USA</h3>
+    <h2>Nissin International Transport USA</h2>
     <p>Indianapolis, IN</p>
     <p><b>May 2021 - September 2022</b></p>
     <p><em>Ocean import/export agent</em></p>
