--- a/students/linov_mykhailo/02_html/education/education.html
+++ b/students/linov_mykhailo/02_html/education/education.html
@@ -9,19 +9,21 @@
 
 <body>
     <header>
-        <a href="../work-experience/work.html">Work Experience</a>
-        <a href="education.html">Education</a>
-        <a href="../skills/skills.html">Skills</a>
-        <a href="https://www.linkedin.com/in/mlinov/">LinkedIn</a>
-        <a href="https://www.facebook.com/michael.linov">Facebook</a>
-        <a href="../about-me/about.html">About me</a>
+        <nav>
+            <a href="work-experience/work.html">Work Experience</a>
+            <a href="education/education.html">Education</a>
+            <a href="skills/skills.html">Skills</a>
+            <a href="https://www.linkedin.com/in/mlinov/" target="_blank">LinkedIn</a>
+            <a href="https://www.facebook.com/michael.linov" target="_blank">Facebook</a>
+            <a href="about-me/about.html">About me</a>
+        </nav>
     </header>
-    <h2><i>Education</i></h2>
-    <h3>Bachelor's degree in Supply Chain Management</h3>
+    <h1><i>Education</i></h1>
+    <h2>Bachelor's degree in Supply Chain Management</h2>
     <p>IUPUI Kelley School of Business - Indianapolis, IN</p>
     <p><b>August 2019 - May 2021</b></p>
     <p>GPA: 3.5 / 4.0</p>
-    <h3>Associate's degree in Business Administration</h3>
+    <h2>Associate's degree in Business Administration</h2>
     <p>Ivy Tech Community College - Indianapolis, IN</p>
     <p><b>August 2016 - May 2019</b></p>
     <a href="../index.html">Main page</a>
