--- a/students/linov_mykhailo/02_html/index.html
+++ b/students/linov_mykhailo/02_html/index.html
@@ -9,12 +9,14 @@
 
 <body>
     <header>
-        <a href="work-experience/work.html">Work Experience</a>
-        <a href="education/education.html">Education</a>
-        <a href="skills/skills.html">Skills</a>
-        <a href="https://www.linkedin.com/in/mlinov/">LinkedIn</a>
-        <a href="https://www.facebook.com/michael.linov">Facebook</a>
-        <a href="about-me/about.html">About me</a>
+        <nav>
+            <a href="work-experience/work.html">Work Experience</a>
+            <a href="education/education.html">Education</a>
+            <a href="skills/skills.html">Skills</a>
+            <a href="https://www.linkedin.com/in/mlinov/" target="_blank">LinkedIn</a>
+            <a href="https://www.facebook.com/michael.linov" target="_blank">Facebook</a>
+            <a href="about-me/about.html">About me</a>
+        </nav>
     </header>
     <main>
         <h1>Mykhailo Linov</h1>
