--- a/students/motkaliuk_andrii/02_html/index.html
+++ b/students/motkaliuk_andrii/02_html/index.html
@@ -9,25 +9,15 @@
   <body>
     <!-- Заголовок про мене з фото -->
     <div>
-      <img
-        id="main"
-        src="./photo/Motkaliuk_photo1.png"
-        width="400"
-        height="400"
-        alt="Фото Андрія Моткалюка"
-      />
+      <img id="main" src="./images/Motkaliuk.png" width="400" height="400" alt="Фото Андрія Моткалюка" />
       <h1>Моткалюк Андрій</h1>
-      <h3>
-        Я є молодим та амбітним хлопцем, який мріє стати висококваліфікованим
-        фронтенд розробником. Маю глибокі знання HTML, CSS та JavaScript, а
-        також досвід роботи з різноманітними фреймворками та бібліотеками,
-        такими як React або Vue.js. Мої проекти відзначаються чистим та
-        ефективним кодом, а також реалізують найновіші стандарти та найкращі
-        практики. Працюючи в команді, я проявляю відмінні комунікаційні навички
-        та готовий вносити свій вклад для досягнення спільних цілей. Шукаю
-        можливість розвиватися, навчатися новому та втілювати свої творчі ідеї в
-        інноваційних проектах.
-      </h3>
+      <p>
+        Я є молодим та амбітним хлопцем, який мріє стати висококваліфікованим фронтенд розробником. Маю глибокі знання HTML, CSS та
+        JavaScript, а також досвід роботи з різноманітними фреймворками та бібліотеками, такими як React або Vue.js. Мої проекти
+        відзначаються чистим та ефективним кодом, а також реалізують найновіші стандарти та найкращі практики. Працюючи в команді, я
+        проявляю відмінні комунікаційні навички та готовий вносити свій вклад для досягнення спільних цілей. Шукаю можливість розвиватися,
+        навчатися новому та втілювати свої творчі ідеї в інноваційних проектах.
+      </p>
     </div>
 
     <!-- Основне про мене -->
@@ -35,40 +25,25 @@
     <nav>
       <div>
         <!-- Моя освіта -->
-        <img
-          src="./photo/univ.jpg"
-          width="150"
-          height="150"
-          alt="Фото закладу"
-        />
+        <img src="./images/univ.jpg" width="150" height="150" alt="Фото закладу" />
         <a href="./page1/page1.html">Моя освіта</a>
       </div>
 
       <div>
         <!-- Мій досвід роботи -->
-        <img
-          src="./photo/work.png"
-          width="150"
-          height="150"
-          alt="Фото ударнника"
-        />
+        <img src="./images/work.png" width="150" height="150" alt="Фото ударнника" />
         <a href="./page2/page2.html">Мій досвід роботи</a>
       </div>
 
       <div>
         <!-- Мої проекти -->
-        <img
-          src="./photo/project.png"
-          width="150"
-          height="150"
-          alt="Фото проектів"
-        />
+        <img src="./images/project.png" width="150" height="150" alt="Фото проектів" />
         <a href="./page3/page3.html">Мої проекти</a>
       </div>
 
       <div>
         <!-- Мої захоплення -->
-        <img src="./photo/man.jpg" width="150" height="150" alt="Фото спорт" />
+        <img src="./images/man.jpg" width="150" height="150" alt="Фото спорт" />
         <a href="./page4/page4.html">Мої захоплення</a>
       </div>
     </nav>
@@ -76,33 +51,13 @@
     <section>
       <h2>Мої контактні дані</h2>
 
-      <p>
-        Мобільний телефон:
-        <a href="tel:+380965253196" target="_blank">+38 (096) 52 53 196</a>
-      </p>
+      <p>Мобільний телефон:<a href="tel:+380965253196" target="_blank">+38 (096) 52 53 196</a></p>
 
-      <p>
-        Електроннна пошта:
-        <a href="mailto:motkaliuk@gmail.com" target="_blank"
-          >motkaliuk@gmail.com</a
-        >
-      </p>
+      <p>Електроннна пошта:<a href="mailto:motkaliuk@gmail.com" target="_blank">motkaliuk@gmail.com</a></p>
 
-      <p>
-        Facebook:
-        <a
-          href="https://www.facebook.com/profile.php?id=100007678533261"
-          target="_blank"
-          >Андрій Моткалюк</a
-        >
-      </p>
+      <p>Facebook:<a href="https://www.facebook.com/profile.php?id=100007678533261" target="_blank">Андрій Моткалюк</a></p>
 
-      <p>
-        Instagram:
-        <a href="https://www.instagram.com/andrew_motkaliuk/" target="_blank"
-          >Андрій Моткалюк</a
-        >
-      </p>
+      <p>Instagram:<a href="https://www.instagram.com/andrew_motkaliuk/" target="_blank">Андрій Моткалюк</a></p>
     </section>
     <a href="#main">Вгору</a>
   </body>
