--- a/students/motkaliuk_andrii/02_html/page4/page4.html
+++ b/students/motkaliuk_andrii/02_html/page4/page4.html
@@ -13,82 +13,37 @@
       <tbody>
         <tr>
           <td>
-            <img
-              src="../photo/pphoto/pp01.jpg"
-              width="250"
-              height="250"
-              alt="Фото гір"
-            />
+            <img src="../images/pp01.jpg" width="250" height="250" alt="Фото гір" />
           </td>
           <td>
-            <img
-              src="../photo/pphoto/pp02.jpg"
-              width="250"
-              height="250"
-              alt="Фото в окулярах"
-            />
+            <img src="../images/pp02.jpg" width="250" height="250" alt="Фото в окулярах" />
           </td>
           <td>
-            <img
-              src="../photo/pphoto/pp03.jpg"
-              width="250"
-              height="250"
-              alt="Фото на конференції"
-            />
+            <img src="../images/pp03.jpg" width="250" height="250" alt="Фото на конференції" />
           </td>
         </tr>
 
         <tr>
           <td>
-            <img
-              src="../photo/pphoto/pp04.jpg"
-              width="250"
-              height="250"
-              alt="Фото в театрі"
-            />
+            <img src="../images/pp04.jpg" width="250" height="250" alt="Фото в театрі" />
           </td>
           <td>
-            <img
-              src="../photo/pphoto/pp05.jpg"
-              width="250"
-              height="250"
-              alt="Фото на скелях"
-            />
+            <img src="../images/pp05.jpg" width="250" height="250" alt="Фото на скелях" />
           </td>
           <td>
-            <img
-              src="../photo/pphoto/pp06.jpg"
-              width="250"
-              height="250"
-              alt="Фото в університеті"
-            />
+            <img src="../images/pp06.jpg" width="250" height="250" alt="Фото в університеті" />
           </td>
         </tr>
 
         <tr>
           <td>
-            <img
-              src="../photo/pphoto/pp07.jpg"
-              width="250"
-              height="250"
-              alt="Фото з гітарою"
-            />
+            <img src="../images/pp07.jpg" width="250" height="250" alt="Фото з гітарою" />
           </td>
           <td>
-            <img
-              src="../photo/pphoto/pp08.jpg"
-              width="250"
-              height="250"
-              alt="Фото на горі"
-            />
+            <img src="../images/pp08.jpg" width="250" height="250" alt="Фото на горі" />
           </td>
           <td>
-            <img
-              src="../photo/pphoto/pp09.jpg"
-              width="250"
-              height="250"
-              alt="Фото на зустрічі"
-            />
+            <img src="../images/pp09.jpg" width="250" height="250" alt="Фото на зустрічі" />
           </td>
         </tr>
       </tbody>
@@ -96,35 +51,26 @@
 
     <div>
       <p>
-        Hiking - це моє велике захоплення. Я люблю відчувати себе частиною
-        природи, осяяним сонцем і оточеним мальовничими пейзажами. Під час
-        гірських прогулянок я відчуваю зв'язок з природою і насолоджуюся спокоєм
-        і гармонією, які можна знайти в гірських вершинах.
+        Hiking - це моє велике захоплення. Я люблю відчувати себе частиною природи, осяяним сонцем і оточеним мальовничими пейзажами. Під
+        час гірських прогулянок я відчуваю зв'язок з природою і насолоджуюся спокоєм і гармонією, які можна знайти в гірських вершинах.
       </p>
       <p>
-        Гра в баскетбол - це для мене більше, ніж просто спорт. Я знаходжу
-        радість у виконанні трюків, пасах і стрибках, і насолоджуюся командною
-        грою, де кожен рух важливий для успіху команди. Крім того, баскетбол
-        допомагає мені підтримувати фізичну форму і розвивати координацію рухів.
+        Гра в баскетбол - це для мене більше, ніж просто спорт. Я знаходжу радість у виконанні трюків, пасах і стрибках, і насолоджуюся
+        командною грою, де кожен рух важливий для успіху команди. Крім того, баскетбол допомагає мені підтримувати фізичну форму і розвивати
+        координацію рухів.
       </p>
       <p>
-        Вечірні пробіжки стали для мене чудовим способом розслабитися після
-        напруженого дня. Під час бігу я відчуваю себе звільненим від буденних
-        турбот і занурююся у свій власний світ, роздумуючи про життя і
-        насолоджуючись моментом. Крім того, це чудовий спосіб тренувати тіло і
-        зберігати своє здоров'я.
+        Вечірні пробіжки стали для мене чудовим способом розслабитися після напруженого дня. Під час бігу я відчуваю себе звільненим від
+        буденних турбот і занурююся у свій власний світ, роздумуючи про життя і насолоджуючись моментом. Крім того, це чудовий спосіб
+        тренувати тіло і зберігати своє здоров'я.
       </p>
       <p>
-        Прогулянки з дівчиною - це особливий час, який ми проводимо разом,
-        насолоджуючись компанією одне одного і відкриваючи нові місця разом. Ми
-        ділимося спільними інтересами, розмовляємо, сміємося і створюємо
-        спогади, які будуть з нами назавжди.
+        Прогулянки з дівчиною - це особливий час, який ми проводимо разом, насолоджуючись компанією одне одного і відкриваючи нові місця
+        разом. Ми ділимося спільними інтересами, розмовляємо, сміємося і створюємо спогади, які будуть з нами назавжди.
       </p>
       <p>
-        Театр і кінотеатр - це мої улюблені місця для отримання нових емоцій і
-        вражень. В театрі я відчуваю магію живого виконання, де актори передають
-        емоції прямо на сцені, а кінотеатр дарує можливість зануритись у нові
-        фантастичні світи.
+        Театр і кінотеатр - це мої улюблені місця для отримання нових емоцій і вражень. В театрі я відчуваю магію живого виконання, де
+        актори передають емоції прямо на сцені, а кінотеатр дарує можливість зануритись у нові фантастичні світи.
       </p>
     </div>
 
