1-th fixing issues

--- a/students/havrylova_kateryna/02_html/index.html
+++ b/students/havrylova_kateryna/02_html/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1 id="up">My profile</h1>
 
-        <div>
+        <nav>
 
             <ul>
                 <li><a href="./page1.html">My education</a></li>
@@ -19,7 +19,7 @@
                 <li><a href="./page3.html">Hobbies</a></li>
             </ul>
 
-        </div>
+        </nav>
 
     </header>
     <b>Hello, my name is Kateryna Havrylova and on this page I will tell about myself</b>
