correct links - added target _blank

--- a/students/havrylova_kateryna/07_figma/index.html
+++ b/students/havrylova_kateryna/07_figma/index.html
@@ -90,19 +90,19 @@
             <div>
                 <img src="./images/jpeg-optimizer_woman.jpg" alt="">
                 <p>
-                    <a href="#">Online fashion store - Homepage</a>
+                    <a href="#" target="_blank">Online fashion store - Homepage</a>
                 </p>
             </div>
             <div>
                 <img src="./images/jpeg-optimizer_reebok_web.png" alt="">
                 <p>
-                    <a href="#">Reebok Store - Concept</a>
+                    <a href="#" target="_blank">Reebok Store - Concept</a>
                 </p>
             </div>
             <div>
                 <img src="./images/jpeg-optimizer_camera.png" alt="">
                 <p>
-                    <a href="#">Braun Landing Page - Concept</a>
+                    <a href="#" target="_blank">Braun Landing Page - Concept</a>
                 </p>
             </div>
         </section>
