--- a/students/hridina_anastasiia/08_css/index.html
+++ b/students/hridina_anastasiia/08_css/index.html
@@ -47,38 +47,38 @@
                 <h4>I work in such programs as</h4>
                 <img src="./images/photoshop.svg" width="89" height="87" alt="Adobe Photoshop">
                 <p>Adobe Photoshop</p>
-                <img src="./images/Star.svg" alt="Star">
-                <img src="./images/Star.svg" alt="Star">
-                <img src="./images/Star.svg" alt="Star">
-                <img src="./images/Star.svg" alt="Star">
-                <img src="./images/Star_empty.svg" alt="Star">
+                <img src="./images/star.svg" alt="Star">
+                <img src="./images/star.svg" alt="Star">
+                <img src="./images/star.svg" alt="Star">
+                <img src="./images/star.svg" alt="Star">
+                <img src="./images/star_empty.svg" alt="Star">
             </div>
             <div>
                 <img src="./images/illustrator.svg" width="89" height="87" alt="Adobe Illustrator">
                 <p>Adobe Illustrator</p>
-                <img src="./images/Star.svg" alt="Star">
-                <img src="./images/Star.svg" alt="Star">
-                <img src="./images/Star.svg" alt="Star">
-                <img src="./images/Star_empty.svg" alt="Star">
-                <img src=".//images/Star_empty.svg" alt="Star">
+                <img src="./images/star.svg" alt="Star">
+                <img src="./images/star.svg" alt="Star">
+                <img src="./images/star.svg" alt="Star">
+                <img src="./images/star_empty.svg" alt="Star">
+                <img src="./images/star_empty.svg" alt="Star">
             </div>
             <div>
                 <img src="./images/after_effects.svg" width="89" height="87" alt="Adobe After Effects">
                 <p>Adobe After Effects</p>
-                <img src="./images/Star.svg" alt="Star">
-                <img src="./images/Star.svg" alt="Star">
-                <img src="./images/Star.svg" alt="Star">
-                <img src="./images/Star.svg" alt="Star">
-                <img src="./images/Star_empty.svg" alt="Star">
+                <img src="./images/star.svg" alt="Star">
+                <img src="./images/star.svg" alt="Star">
+                <img src="./images/star.svg" alt="Star">
+                <img src="./images/star.svg" alt="Star">
+                <img src="./images/star_empty.svg" alt="Star">
             </div>
             <div>
                 <img src="./images/figma.svg" width="58" height="88" alt="Figma">
                 <p>Figma</p>
-                <img src="./images/Star.svg" alt="Star">
-                <img src="./images/Star.svg" alt="Star">
-                <img src="./images/Star.svg" alt="Star">
-                <img src="./images/Star.svg" alt="Star">
-                <img src="./images/Star_empty.svg" alt="Star">
+                <img src="./images/star.svg" alt="Star">
+                <img src="./images/star.svg" alt="Star">
+                <img src="./images/star.svg" alt="Star">
+                <img src="./images/star.svg" alt="Star">
+                <img src="./images/star_empty.svg" alt="Star">
             </div>
         </section>
         <section>
@@ -105,7 +105,7 @@
             </div>
             <div>
                 <a href="#"><img src="./images/linkedin.svg" alt="LinkedIn"></a>
-                <a href="#"><img src=".//images/instagram.svg" alt="Instagram"></a>
+                <a href="#"><img src="./images/instagram.svg" alt="Instagram"></a>
                 <a href="#"><img src="./images/behance.svg" alt="Behance"></a>
                 <a href="#"><img src="./images/dribble.svg" alt="Dribble"></a>
             </div>
