--- a/students/havrylova_kateryna/07_figma/index.html
+++ b/students/havrylova_kateryna/07_figma/index.html
@@ -12,13 +12,13 @@
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About me</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="#about_me">About me</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
-        <img src="./images/Vector.png" alt="">
+        <img src="./images/vector.svg" alt="">
     </header>
     <main>
         <section class="hero_block">
@@ -28,7 +28,7 @@
 
         <section class="about">
             <div>
-                <h2>About me</h2>
+                <h2 id="about_me">About me</h2>
                 <p>Hi, I'm Denis – UX/UI designer from Minsk. I'm interested in design and everything connected with it.
                 </p>
                 <p>I'm studying at courses "Web and mobile design interfaces" in IT-Academy. </p>
@@ -38,47 +38,49 @@
 
         <section class="skills">
             <div>
-                <h2>Skills</h2>
+                <h2 id="skills">Skills</h2>
                 <p>I work in such programs as</p>
                 <ul>
                     <li>
-                        <img src="./images/Ps.png" alt="">
+                        <img src="./images/ps.svg" alt="">
                         <p>Adobe Photoshop</p>
-                        <p><img src="./images/Star_black.png" alt="">
-                            <img src="./images/Star_black.png" alt="">
-                            <img src="./images/Star_black.png" alt="">
-                            <img src="./images/Star_black.png" alt="">
-                            <img src="./images/Star.png" alt="">
+                        <p><img src="./images/star_black.svg" alt="">
+                            <img src="./images/star_black.svg" alt="">
+                            <img src="./images/star_black.svg" alt="">
+                            <img src="./images/star_black.svg" alt="">
+                            <img src="./images/star_empty.svg" alt="">
                         </p>
                     </li>
                     <li>
-                        <img src="./images/Ai.png" alt="">
+                        <img src="./images/ai.svg" alt="">
                         <p>Adobe Illustrator</p>
-                        <p><img src="./images/Star_black.png" alt="">
-                            <img src="./images/Star_black.png" alt="">
-                            <img src="./images/Star_black.png" alt="">
-                            <img src="./images/Star.png" alt="">
-                            <img src="./images/Star.png" alt="">
+                        <p><img src="./images/star_black.svg" alt="">
+                            <img src="./images/star_black.svg" alt="">
+                            <img src="./images/star_black.svg" alt="">
+                            <img src="./images/star_empty.svg" alt="">
+                            <img src="./images/star_empty.svg" alt="">
                         </p>
                     </li>
                     <li>
-                        <img src="./images/Ae.png" alt="">
+                        <img src="./images/ae.svg" alt="">
                         <p>Adobe After Effects</p>
-                        <p><img src="./images/Star_black.png" alt="">
-                            <img src="./images/Star_black.png" alt="">
-                            <img src="./images/Star_black.png" alt="">
-                            <img src="./images/Star_black.png" alt="">
-                            <img src="./images/Star.png" alt="">
+                        <p>
+                            <img src="./images/star_black.svg" alt="">
+                            <img src="./images/star_black.svg" alt="">
+                            <img src="./images/star_black.svg" alt="">
+                            <img src="./images/star_black.svg" alt="">
+                            <img src="./images/star_empty.svg" alt="">
                         </p>
                     </li>
                     <li>
-                        <img src="./images/Figma.png" alt="">
+                        <img src="./images/figma.svg" alt="">
                         <p>Figma</p>
-                        <p><img src="./images/Star_black.png" alt="">
-                            <img src="./images/Star_black.png" alt="">
-                            <img src="./images/Star_black.png" alt="">
-                            <img src="./images/Star_black.png" alt="">
-                            <img src="./images/Star.png" alt="">
+                        <p>
+                            <img src="./images/star_black.svg" alt="">
+                            <img src="./images/star_black.svg" alt="">
+                            <img src="./images/star_black.svg" alt="">
+                            <img src="./images/star_black.svg" alt="">
+                            <img src="./images/star_empty.svg" alt="">
                         </p>
                     </li>
                 </ul>
@@ -86,7 +88,7 @@
         </section>
 
         <section class="portfolio">
-            <h2>Portfolio</h2>
+            <h2 id="portfolio">Portfolio</h2>
             <div>
                 <img src="./images/jpeg-optimizer_woman.jpg" alt="">
                 <p>
@@ -94,13 +96,13 @@
                 </p>
             </div>
             <div>
-                <img src="./images/jpeg-optimizer_reebok_web.png" alt="">
+                <img src="./images/jpeg-optimizer_reebok_web.jpg" alt="">
                 <p>
                     <a href="#" target="_blank">Reebok Store - Concept</a>
                 </p>
             </div>
             <div>
-                <img src="./images/jpeg-optimizer_camera.png" alt="">
+                <img src="./images/jpeg-optimizer_camera.jpg" alt="">
                 <p>
                     <a href="#" target="_blank">Braun Landing Page - Concept</a>
                 </p>
@@ -110,15 +112,15 @@
     </main>
     <footer>
         <div>
-            <h2>Contacts</h2>
+            <h2 id="contacts">Contacts</h2>
             <p>Want to know more or just chat?
                 You are welcome!</p>
             <button>Send message</button>
             <ul>
-                <li><img src="./images/in.png" alt=""></li>
-                <li><img src="./images/insta.png" alt=""></li>
-                <li><img src="./images/behance.png" alt=""></li>
-                <li><img src="./images/surface1 7.png" alt=""></li>
+                <li><img src="./images/in.svg" alt=""></li>
+                <li><img src="./images/surface1 6.svg" alt=""></li>
+                <li><img src="./images/behance.svg" alt=""></li>
+                <li><img src="./images/surface1 7.svg" alt=""></li>
             </ul>
             <p>Like me on LinkedIn, Instagram, Behance, Dribble</p>
         </div>
