--- a/students/tiselko_iryna/02_html/english version/about_eng.html
+++ b/students/tiselko_iryna/02_html/english version/about_eng.html
@@ -20,7 +20,7 @@
         <h1>About me</h1>
     </header>
 
-    <section>
+    <main>
         <ul>
             <li><a href="#lang">Language</a></li>
             <li><a href="#education">Education</a></li>
@@ -28,10 +28,8 @@
             <li><a href="#ss">Soft Skills</a></li>
         </ul>
 
-        <aside id="about">
-            <figure>
-                <img src="../images/about/photo_5233642170047646316_y.jpg" alt="Iryna Tiselko" width="700" height="707">
-            </figure>
+        <section>
+            <img src="../images/about/photo_5233642170047646316_y.jpg" alt="Iryna Tiselko" width="700" height="707">
             <div>
                 <h2>Interesting facts:</h2>
                 <ul>
@@ -40,27 +38,27 @@
                     <li>In 2012 completed the Amadeus courses which means that I am a certified flight manager</li>
                 </ul>
             </div>
-        </aside>
+        </section>
 
-        <article>
+        <section>
             <h2 id="lang">Language</h2>
             <ul>
                 <li>English - Upper-intermediatet</li>
                 <li>Polish - Beginner</li>
                 <li>Ukrainian</li>
             </ul>
-        </article>
+        </section>
 
-        <article>
+        <section>
             <h2 id="education">Education</h2>
             <ul>
                 <li>Odessa National Economy University, (2009 - 2014, Bachelor)</li>
                 <li>Cases Media, 2022</li>
                 <li>Beetroot Academy, 2023</li>
             </ul>
-        </article>
+        </section>
 
-        <article>
+        <section>
             <h2 id="hs">Hard Skills</h2>
             <ul>
                 <li>HTML, CSS</li>
@@ -69,9 +67,9 @@
                 <li>React</li>
                 <li>Vue.js</li>
             </ul>
-        </article>
+        </section>
 
-        <article>
+        <section>
             <h2 id="ss">Soft Skills</h2>
             <ul>
                 <li>Time management skills</li>
@@ -80,14 +78,14 @@
                 <li>Self-discipline</li>
                 <li>Self-motivation</li>
             </ul>
-        </article>
-    </section>
+        </section>
+    </main>
 
     <footer>
         <!-- Lang button -->
         <div>
-            <button><a href="../pages/about.html">UKR</a></button>
-            <button><a href="./about_eng.html">ENG</a></button>
+            <button>UKR</button>
+            <button>ENG</button>
         </div>
     </footer>
 </body>
