--- a/students/tiselko_iryna/02_html/english version/contacts_eng.html
+++ b/students/tiselko_iryna/02_html/english version/contacts_eng.html
@@ -19,8 +19,8 @@
         </div>
     </header>
 
-    <section>
-        <div class="line"></div>
+    <main>
+        <hr>
         <p>Let's have a chat and see to what kind of an amazing project we are headed to.</p>
         <p>Drop me an email or contact me through my social medias <br> you are always welcome to say HI</p>
 
@@ -34,13 +34,13 @@
         <div>
             <a href="mailto:my.email@gmail.com">Get in touch</a>
         </div>
-    </section>
+    </main>
 
     <footer>
         <!-- Lang button -->
         <div>
-            <button><a href="../pages/contacts.html">UKR</a></button>
-            <button><a href="./contacts_eng.html">ENG</a></button>
+            <button>UKR</button>
+            <button>ENG</button>
         </div>
     </footer>
 </body>
