--- a/students/tiselko_iryna/02_html/index.html
+++ b/students/tiselko_iryna/02_html/index.html
@@ -16,22 +16,22 @@
         </div>
     </header>
 
-    <section>
+    <main>
         <div class="main-image">
             <img src="./images/main/pexels-olena-bohovyk-1772123.jpg" alt="main_page_img" width="1920">
             <div class="image-text">
-              <h1>&lt;h1&gt;Мене звуть Ірина Тіселько&lt;/h1&gt;</h1>
+              <h1>Мене звуть Ірина Тіселько</h1>
               <h2>І я веб-розробниця</h2>
               <q cite="The_Rolling_Stones">Дозвольте мені представитися... (c)</q><br>
             </div>
           </div>
-    </section>
+    </main>
 
     <footer>
         <!-- Lang button -->
         <div>
-            <button><a href="./index.html">Укр</a></button>
-            <button><a href="./english version/main.html">Анг</a></button>
+            <button>UKR</button>
+            <button>ENG</button>
         </div>
     </footer>
 </body>
