--- a/students/tiselko_iryna/02_html/pages/about.html
+++ b/students/tiselko_iryna/02_html/pages/about.html
@@ -6,7 +6,7 @@
     <title>Про мене</title>
 </head>
 <body>
-    <header>
+    <header >
         <!-- Dropdown menu -->
         <div class="dropdown">
             <button class="dropbtn">../</button>
@@ -20,7 +20,7 @@
         <h1>Про мене</h1>
     </header>
 
-    <section>
+    <main>
         <ul>
             <li><a href="#lang">Мова</a></li>
             <li><a href="#education">Освіта</a></li>
@@ -28,10 +28,8 @@
             <li><a href="#ss">Особисті навички</a></li>
         </ul>
 
-        <aside id="about">
-            <figure>
-                <img src="../images/about/photo_5233642170047646316_y.jpg" alt="Iryna Tiselko" width="700" height="707">
-            </figure>
+        <section>
+            <img src="../images/about/photo_5233642170047646316_y.jpg" alt="Iryna Tiselko" width="700" height="707">
             <div>
                 <h2>Цікаві факти:</h2>
                 <ul>
@@ -40,27 +38,27 @@
                     <li>У 2012 звершила курси Амадеус, що означає що я сертифікований авіаменеджер</li>
                 </ul>
             </div>
-        </aside>
+        </section>
 
-        <article>
+        <section>
             <h2 id="lang">Мова</h2>
             <ul>
                 <li>Англійська - Upper-intermediatet</li>
                 <li>Польська - Beginner</li>
                 <li>Українська</li>
             </ul>
-        </article>
+        </section>
 
-        <article>
+        <section>
             <h2 id="education">Освіта</h2>
             <ul>
                 <li>Одеський Національний Економічний Університет, (2009 - 2014, Бакалавр)</li>
                 <li>Cases Media, 2022</li>
                 <li>Beetroot Academy, 2023</li>
             </ul>
-        </article>
+        </section>
 
-        <article>
+        <section>
             <h2 id="hs">Професійні навички</h2>
             <ul>
                 <li>HTML, CSS</li>
@@ -69,9 +67,9 @@
                 <li>React</li>
                 <li>Vue.js</li>
             </ul>
-        </article>
+        </section>
 
-        <article>
+        <section>
             <h2 id="ss">Особисті навички</h2>
             <ul>
                 <li>Навички тайм-менеджменту</li>
@@ -79,14 +77,14 @@
                 <li>Комунікативність</li>
                 <li>Самодисципліна</li>
             </ul>
-        </article>
-    </section>
+        </section>
+    </main>
 
     <footer>
         <!-- Lang button -->
         <div>
-            <button><a href="./about.html">Укр</a></button>
-            <button><a href="../english version/about_eng.html">Анг</a></button>
+            <button>UKR</button>
+            <button>ENG</button>
         </div>
     </footer>
 </body>
