--- a/students/tiselko_iryna/02_html/pages/contacts.html
+++ b/students/tiselko_iryna/02_html/pages/contacts.html
@@ -19,8 +19,8 @@
         </div>
     </header>
 
-    <section>
-        <div class="line"></div>
+    <main>
+        <hr>
         <p>Давайте поспілкуємося і побачимо, що дивовижного ми зможемо створити разом</p>
         <p>Напишіть мені на почту або зв'яжіться зі мною через мої соціальні мережі <br> Буду щиро рада Вас почути</p>
 
@@ -34,13 +34,13 @@
         <div>
             <a href="mailto:my.email@gmail.com">Напишіть мені</a>
         </div>
-    </section>
+    </main>
 
     <footer>
         <!-- Lang button -->
         <div>
-            <button><a href="./contacts.html">Укр</a></button>
-            <button><a href="../english version/contacts_eng.html">Анг</a></button>
+            <button>UKR</button>
+            <button>ENG</button>
         </div>
     </footer>
 </body>
