--- a/students/tiselko_iryna/02_html/pages/projects.html
+++ b/students/tiselko_iryna/02_html/pages/projects.html
@@ -20,7 +20,7 @@
         <h1>Проєкти</h1>
     </header>
 
-    <section>
+    <main>
         <p>Тут буде опис першого проэкту.</p>
         <figure>
             <a href="#" target="_blank">
@@ -44,13 +44,13 @@
             </a>
             <figcaption>Проєкт 3</figcaption>
         </figure>
-    </section>
+    </main>
 
     <footer>
         <!-- Lang button -->
         <div>
-            <button><a href="./projects.html">Укр</a></button>
-            <button><a href="../english version/projects_eng.html">Анг</a></button>
+            <button>UKR</button>
+            <button>ENG</button>
         </div>
     </footer>
 </body>
