--- a/students/tiselko_iryna/02_html/english version/main.html
+++ b/students/tiselko_iryna/02_html/english version/main.html
@@ -16,7 +16,7 @@
         </div>
     </header>
 
-    <section>
+    <main>
         <div class="main-image">
             <img src="../images/main/pexels-olena-bohovyk-1772123.jpg" alt="main_page_img" width="1920">
             <div class="image-text">
@@ -25,13 +25,13 @@
               <q cite="The_Rolling_Stones">Please allow me to introduce myself... (c)</q><br>
             </div>
           </div>
-    </section>
+    </main>
 
     <footer>
         <!-- Lang button -->
         <div>
-            <button><a href="../index.html">UKR</a></button>
-            <button><a href="./main.html">ENG</a></button>
+            <button>UKR</button>
+            <button>ENG</button>
         </div>
     </footer>
 </body>
