--- a/students/tiselko_iryna/02_html/english version/projects_eng.html
+++ b/students/tiselko_iryna/02_html/english version/projects_eng.html
@@ -20,7 +20,7 @@
         <h1>Projects</h1>
     </header>
 
-    <section>
+    <main>
         <p>Information about first project</p>
         <figure>
             <a href="#" target="_blank">
@@ -44,13 +44,13 @@
             </a>
             <figcaption>Project 3</figcaption>
         </figure>
-    </section>
+    </main>
 
     <footer>
         <!-- Lang button -->
         <div>
-            <button><a href="../pages/projects.html">UKR</a></button>
-            <button><a href="./projects_eng.html">ENG</a></button>
+            <button>UKR</button>
+            <button>ENG</button>
         </div>
     </footer>
 </body>
