--- a/students/tiselko_iryna/02_html/english version/about_eng.html
+++ b/students/tiselko_iryna/02_html/english version/about_eng.html
@@ -6,7 +6,7 @@
     <title>About</title>
 </head>
 <body>
-    <header>
+    <header id="abt_en">
         <!-- Dropdown menu -->
         <div class="dropdown">
             <button class="dropbtn">../</button>
