--- a/students/tiselko_iryna/02_html/english version/main.html
+++ b/students/tiselko_iryna/02_html/english version/main.html
@@ -6,13 +6,13 @@
     <title>VSite ITiselko</title>
 </head>
 <body>
-    <header>
+    <header id="main_en">
         <!-- pill-nav -->
         <div class="pill-nav">
-            <a class="active" href="#">Home</a>
-            <a href="./about_eng.html">About</a>
-            <a href="./projects_eng.html">Projects</a>
-            <a href="./contacts_eng.html">Contacts</a>
+            <a class="active" href="#main_en">Home</a>
+            <a href="./about_eng.html#abt_en">About</a>
+            <a href="./projects_eng.html#prjts_en">Projects</a>
+            <a href="./contacts_eng.html#contacts_en">Contacts</a>
         </div>
     </header>
 
