--- a/students/tiselko_iryna/02_html/index.html
+++ b/students/tiselko_iryna/02_html/index.html
@@ -6,13 +6,13 @@
     <title>VSite ITiseko</title>
 </head>
 <body>
-    <header>
+    <header id="main_p">
         <!-- pill-nav -->
         <div class="pill-nav">
-            <a class="active" href="./index.html">На головну</a>
-            <a href="./pages/about.html">Про мене</a>
-            <a href="./pages/projects.html">Проєкти</a>
-            <a href="./pages/contacts.html">Контакти</a>
+            <a class="active" href="#main_p">На головну</a>
+            <a href="./pages/about.html#abt">Про мене</a>
+            <a href="./pages/projects.html#prjts">Проєкти</a>
+            <a href="./pages/contacts.html#contacts">Контакти</a>
         </div>
     </header>
 
