--- a/students/tiselko_iryna/02_html/pages/about.html
+++ b/students/tiselko_iryna/02_html/pages/about.html
@@ -6,7 +6,7 @@
     <title>Про мене</title>
 </head>
 <body>
-    <header >
+    <header id="abt">
         <!-- Dropdown menu -->
         <div class="dropdown">
             <button class="dropbtn">../</button>
