--- a/students/tiselko_iryna/02_html/pages/contacts.html
+++ b/students/tiselko_iryna/02_html/pages/contacts.html
@@ -7,7 +7,7 @@
     <title>Контакти</title>
 </head>
 <body>
-    <header>
+    <header id="contacts">
         <!-- Dropdown menu -->
         <div class="dropdown">
             <button class="dropbtn">../</button>
