--- a/students/tiselko_iryna/02_html/pages/projects.html
+++ b/students/tiselko_iryna/02_html/pages/projects.html
@@ -6,7 +6,7 @@
     <title>Проєкти</title>
 </head>
 <body>
-    <header>
+    <header id="prjts">
         <!-- Dropdown menu -->
         <div class="dropdown">
             <button class="dropbtn">../</button>
