--- a/students/hridina_anastasiia/08_css/index.html
+++ b/students/hridina_anastasiia/08_css/index.html
@@ -10,12 +10,14 @@
 <body>
     <header>
         <nav>
-            <ul>
-                <li><a href="index.html#">Home</a></li>
-                <li><a href="#about me">About me</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contacts">Contacts</a></li>
+            <ul
+                style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
+                <li style="display: inline;"><a style="color: black;" href="index.html#">Home</a>
+                </li>
+                <li style="display: inline;"><a style="color: #828282;" href="#about me">About me</a></li>
+                <li style="display: inline;"><a style="color: #828282;" href="#skills">Skills</a></li>
+                <li style="display: inline;"><a style="color: #828282;" href="#portfolio">Portfolio</a></li>
+                <li style="display: inline;"><a style="color: #828282;" href="#contacts">Contacts</a></li>
             </ul>
         </nav>
     </header>
@@ -23,28 +25,33 @@
     <main>
         <section>
             <div>
-                <h1>Denis Novik</h1>
+                <h1 style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;"
+                    style="font-size:47px;" style="font-style: normal;" style="line-height: normal;">
+                    Denis Novik</h1>
                 <img src="./images/denis_novik_photo.jpg" width="943" height="387" alt="Denis Novik">
             </div>
         </section>
-        <section>
-            <div id="about me">
+        <section style="text-align: center;">
+            <div id="about me"
+                style="background-color: #F6F6F6; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
                 <h2>About me</h2>
-                <p>Hi, I'm Denis – UX/UI designer from Minsk.
-                    I'm interested in design and everything connected with it.
+                <p style="text-align: center;">Hi, I'm Denis – UX/UI designer from Minsk.
+                    I'm interested in design and everything connected with it.</p>
 
-                    I'm studying at courses "Web and mobile design
-                    interfaces" in IT-Academy.
+                <p style="text-align: center;">I'm studying at courses "Web and mobile design
+                    interfaces" in IT-Academy.</p>
 
-                    Ready to implement excellent projects
-                    with wonderful people.
-                </p>
+                <p style="text-align: center;">Ready to implement excellent projects
+                    with wonderful people.</p>
             </div>
         </section>
         <section>
-            <div id="skills">
+            <div id="skills"
+                style="text-align: center; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
                 <h2>Skills</h2>
-                <h4>I work in such programs as</h4>
+                <h3>I work in such programs as</h3>
+            </div>
+            <div>
                 <img src="./images/photoshop.svg" width="89" height="87" alt="Adobe Photoshop">
                 <p>Adobe Photoshop</p>
                 <img src="./images/star.svg" alt="Star">
@@ -81,9 +88,11 @@
                 <img src="./images/star_empty.svg" alt="Star">
             </div>
         </section>
-        <section>
+        <section style="background-color: #F6F6F6;">
             <div id="portfolio">
-                <h2>Portfolio</h2>
+                <h2
+                    style="text-align: center; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
+                    Portfolio</h2>
                 <img src="./images/fashion_store.jpg" width="936" height="510" alt="Online fashion store">
                 <a href="#">Online fashion store - Homepage</a>
             </div>
@@ -96,8 +105,9 @@
                 <a href="#">Braun Landing Page - Concept</a>
             </div>
         </section>
-        <footer>
-            <div id="contacts">
+        <footer style="text-align: center;">
+            <div id="contacts"
+                style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
                 <h2>Contacts</h2>
                 <p>Want to know more or just chat?
                     You are welcome!</p>
@@ -110,7 +120,8 @@
                 <a href="#"><img src="./images/dribble.svg" alt="Dribble"></a>
             </div>
             <div>
-                <p>
+                <p
+                    style="color: #828282; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
                     Like me on
                     LinkedIn, Instagram, Behance,
                     Dribble
