--- a/students/hridina_anastasiia/08_css/index.html
+++ b/students/hridina_anastasiia/08_css/index.html
@@ -25,8 +25,8 @@
     <main>
         <section>
             <div>
-                <h1 style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;"
-                    style="font-size:47px;" style="font-style: normal;" style="line-height: normal;">
+                <h1 style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+                    font-size:47px; font-style: normal;">
                     Denis Novik</h1>
                 <img src="./images/denis_novik_photo.jpg" width="943" height="387" alt="Denis Novik">
             </div>
