make changes file denis novik

--- a/students/umienchuk_oksana/07_figma/index.html
+++ b/students/umienchuk_oksana/07_figma/index.html
@@ -26,7 +26,7 @@
         <h1>Denis Novik</h1>
         <img src="./images/banner.jpg" alt="Banner with man" width="944">
 
-        <!-- about me -->
+        <!-- Main block About me -->
         <section>
             <h2 id="About_me">About me</h2>
             <div>
@@ -45,129 +45,133 @@
             </div>
         </section>
 
-        <!-- Skills -->
+        <!-- Main block Skills -->
         <section>
             <h2 id="Skills">Skills</h2>
             <p>I work in such programs as</p>
-            <ul>
-                <!-- Block Adobe Photoshop -->
-                <li>
-                    <img src="./svg/Adobe-Photoshop.svg" alt="Adobe Photoshop">
-                    <p>Adobe Photoshop</p>
-                    <ul>
-                        <li>
-                            <img src="./svg/Star.svg" alt="First star">
-                        </li>
-                        <li>
-                            <img src="./svg/Star.svg" alt="Second star">
-                        </li>
-                        <li>
-                            <img src="./svg/Star.svg" alt="Third star">
-                        </li>
-                        <li>
-                            <img src="./svg/Star.svg" alt="Fourth star">
-                        </li>
-                        <li>
-                            <img src="./svg/Star-light.svg" alt="Fifth star">
-                        </li>
-                    </ul>
-                </li>
 
-                <!-- Block Adobe Illustrator -->
-                <li>
-                    <img src="./svg/Adobe-Illustrator.svg" alt="Adobe Illustrator">
-                    <p>Adobe Illustrator</p>
-                    <ul>
-                        <li>
-                            <img src="./svg/Star.svg" alt="First star">
-                        </li>
-                        <li>
-                            <img src="./svg/Star.svg" alt="Second star">
-                        </li>
-                        <li>
-                            <img src="./svg/Star.svg" alt="Third star">
-                        </li>
-                        <li>
-                            <img src="./svg/Star-light.svg" alt="Fourth star">
-                        </li>
-                        <li>
-                            <img src="./svg/Star-light.svg" alt="Fifth star">
-                        </li>
-                    </ul>
-                </li>
+            <!-- Skills block Adobe Photoshop -->
+            <section>
+                <img src="./images/adobe-photoshop.svg" alt="Adobe Photoshop">
+                <p>Adobe Photoshop</p>
+                <ul>
+                    <li>
+                        <img src="./images/star.svg" alt="First star">
+                    </li>
+                    <li>
+                        <img src="./images/star.svg" alt="Second star">
+                    </li>
+                    <li>
+                        <img src="./images/star.svg" alt="Third star">
+                    </li>
+                    <li>
+                        <img src="./images/star.svg" alt="Fourth star">
+                    </li>
+                    <li>
+                        <img src="./images/star-light.svg" alt="Fifth star">
+                    </li>
+                </ul>
+            </section>
 
-                <!-- Block Adobe After Effects -->
-                <li>
-                    <img src="./svg/Adobe-After-Effects.svg" alt="Adobe After Effects">
-                    <p>Adobe After Effects</p>
-                    <ul>
-                        <li>
-                            <img src="./svg/Star.svg" alt="First star">
-                        </li>
-                        <li>
-                            <img src="./svg/Star.svg" alt="Second star">
-                        </li>
-                        <li>
-                            <img src="./svg/Star.svg" alt="Third star">
-                        </li>
-                        <li>
-                            <img src="./svg/Star.svg" alt="Fourth star">
-                        </li>
-                        <li>
-                            <img src="./svg/Star-light.svg" alt="Fifth star">
-                        </li>
-                    </ul>
-                </li>
+            <!-- Skills block Adobe Illustrator -->
+            <section>
+                <img src="./images/adobe-illustrator.svg" alt="Adobe Illustrator">
+                <p>Adobe Illustrator</p>
+                <ul>
+                    <li>
+                        <img src="./images/star.svg" alt="First star">
+                    </li>
+                    <li>
+                        <img src="./images/star.svg" alt="Second star">
+                    </li>
+                    <li>
+                        <img src="./images/star.svg" alt="Third star">
+                    </li>
+                    <li>
+                        <img src="./images/star-light.svg" alt="Fourth star">
+                    </li>
+                    <li>
+                        <img src="./images/star-light.svg" alt="Fifth star">
+                    </li>
+                </ul>
+            </section>
 
-                <!-- Block Figma -->
-                <li>
-                    <img src="./svg/Figma.svg" alt="Figma">
-                    <p>Figma</p>
-                    <ul>
-                        <li>
-                            <img src="./svg/Star.svg" alt="First star">
-                        </li>
-                        <li>
-                            <img src="./svg/Star.svg" alt="Second star">
-                        </li>
-                        <li>
-                            <img src="./svg/Star.svg" alt="Third star">
-                        </li>
-                        <li>
-                            <img src="./svg/Star.svg" alt="Fourth star">
-                        </li>
-                        <li>
-                            <img src="./svg/Star-light.svg" alt="Fifth star">
-                        </li>
-                    </ul>
-                </li>
-            </ul>
+            <!-- Skills block Adobe After Effects -->
+            <section>
+                <img src="./images/adobe-after-effects.svg" alt="Adobe After Effects">
+                <p>Adobe After Effects</p>
+                <ul>
+                    <li>
+                        <img src="./images/star.svg" alt="First star">
+                    </li>
+                    <li>
+                        <img src="./images/star.svg" alt="Second star">
+                    </li>
+                    <li>
+                        <img src="./images/star.svg" alt="Third star">
+                    </li>
+                    <li>
+                        <img src="./images/star.svg" alt="Fourth star">
+                    </li>
+                    <li>
+                        <img src="./images/star-light.svg" alt="Fifth star">
+                    </li>
+                </ul>
+            </section>
+
+            <!-- Skills block Figma -->
+            <section>
+                <img src="./images/figma.svg" alt="Figma">
+                <p>Figma</p>
+                <ul>
+                    <li>
+                        <img src="./images/star.svg" alt="First star">
+                    </li>
+                    <li>
+                        <img src="./images/star.svg" alt="Second star">
+                    </li>
+                    <li>
+                        <img src="./images/star.svg" alt="Third star">
+                    </li>
+                    <li>
+                        <img src="./images/star.svg" alt="Fourth star">
+                    </li>
+                    <li>
+                        <img src="./images/star-light.svg" alt="Fifth star">
+                    </li>
+                </ul>
+            </section>
 
         </section>
 
-        <!-- Block Portfolio -->
+        <!-- Main block Portfolio -->
         <section>
             <h2 id="Portfolio">Portfolio</h2>
-            <ul>
-                <li>
-                    <img src="./images/Online-Fashion-Store.jpg" alt="Online Fashion Store Web" width="936">
-                    <a href="#" target="_blank">
-                        <p>Online fashion store - Homepage</p>
-                    </a>
-                </li>
-                <li>
-                    <img src="./images/reebok-store.jpg" alt="Reebok Web" width="936">
-                    <a href="#" target="_blank">
-                        <p>Reebok Store - Concept</p>
-                    </a>
-                </li>
-                <li>
-                    <img src="./images/braun.jpg" alt="Braun Web" width="936">
-                    <a href="#" target="_blank">
-                        <p>Braun Landing Page - Concept</p>
-                    </a>
-                </li>
-            </ul>
+
+            <!--  Portfolio about Online fashion store -->
+            <section>
+                <img src="./images/online-fashion-store.jpg" alt="Online Fashion Store Web" width="936">
+                <a href="#" target="_blank">
+                    <p>Online fashion store - Homepage</p>
+                </a>
+            </section>
+
+            <!-- Portfolio about Reebok Store -->
+            <section>
+
+                <img src="./images/reebok-store.jpg" alt="Reebok Web" width="936">
+                <a href="#" target="_blank">
+                    <p>Reebok Store - Concept</p>
+                </a>
+            </section>
+
+            <!-- Portfolio about Braun Landing Page -->
+            <section>
+                <img src="./images/braun.jpg" alt="Braun Web" width="936">
+                <a href="#" target="_blank">
+                    <p>Braun Landing Page - Concept</p>
+                </a>
+            </section>
         </section>
 
     </main>
@@ -184,16 +188,16 @@
         <!-- Social network -->
         <ul>
             <li>
-                <a target="_blank" href="#"><img src="./svg/logo-in.svg" alt="Logo linkedin"></a>
+                <a target="_blank" href="#"><img src="./images/logo-in.svg" alt="Logo linkedin"></a>
             </li>
             <li>
-                <a target="_blank" href="#"><img src="./svg/logo-instagram.svg" alt="Logo instagram"></a>
+                <a target="_blank" href="#"><img src="./images/logo-instagram.svg" alt="Logo instagram"></a>
             </li>
             <li>
-                <a target="_blank" href="#"><img src="./svg/be.svg" alt="Logo Behance"></a>
+                <a target="_blank" href="#"><img src="./images/be.svg" alt="Logo Behance"></a>
             </li>
             <li>
-                <a target="_blank" href="#"><img src="./svg/ball.svg" alt="Logo Dribbble"></a>
+                <a target="_blank" href="#"><img src="./images/dribbble.svg" alt="Logo Dribbble"></a>
             </li>
         </ul>
 
