--- a/students/dunaieva_alona/02_html/hobby.html
+++ b/students/dunaieva_alona/02_html/hobby.html
@@ -13,19 +13,15 @@
     </nav>
 </body>
 <hr>
-<div>
-    <h2>
-        <font style="color: red;">Хоббі</font>
-    </h2>
-    <p>
-        <font style="background-color: rgb(247, 161, 161);">Катання на велосипеді</font>
-    </p>
+<section id="hobby">
+    <h1>Хоббі</h1>
+    <p>Катання на велосипеді</p>
     <img src="./img/bike.jpg" alt="bike" width="700" height="400">
     <p><i>Також у вільний час читаю книгу</i></p>
     <img src="./img/book.jpg" alt="book" width="300" height="400">
     <p><i>Або малюю</i></p>
     <img src="./img/paint.jpg" alt="paint" width="300" height="400">
-</div>
+</section>
 <hr>
 
 </html>
