--- a/students/dunaieva_alona/02_html/last-job.html
+++ b/students/dunaieva_alona/02_html/last-job.html
@@ -12,15 +12,11 @@
         <a href="index.html">Main page</a>
     </nav>
     <hr>
-    <div>
-        <h2>
-            <font style="color: blueviolet;">Досвід роботи</font>
-        </h2>
-        <p>
-            <font style="background-color:rgb(209, 171, 244) ;">АТ "Державний Ощадний Банк України" Філія - Полтавське обласне управління</font>
-        </p>
+    <section id="last-job">
+        <h1>Досвід роботи</h1>
+        <p>АТ "Державний Ощадний Банк України" Філія - Полтавське обласне управління</p>
         <p><b>18.04.2022-15.12.2022</b> <i>економіст I категорії служби роздрібного бізнесу з обслуговування фізичних осіб ТВБВ №10016/0120</i> </p>
-        <h3>Обов'язки:</h3>
+        <h2>Обов'язки:</h2>
         <ul>
             <li>зустріч і консультація клієнтів щодо продуктів, послуг і тарифів Банку, продажах банківських продуктів;</li>
             <li>допомога в користуванні інформаційно-платіжними терміналами, банкоматами;</li>
@@ -28,7 +24,7 @@
             <li>забезпечення належного порядку в операційному залі, своєчасному і якісному обслуговуванн іклієнтів.</li>
         </ul>
         <img src="./img/bank.jpg" alt="bank" width="700" height="400">
-    </div>
+    </section>
     <hr>
 
 </body>
