--- a/students/dunaieva_alona/02_html/education.html
+++ b/students/dunaieva_alona/02_html/education.html
@@ -8,20 +8,16 @@
 </head>
 
 <body>
-    <nav class="menu" id="menutop">
+    <nav>
         <a href="index.html">Main page</a> |
     </nav>
     <hr>
-    <div>
-        <h2>
-            <font style="color: rgb(23, 23, 238);">Освіта</font>
-        </h2>
-        <p>
-            <font style="background-color: rgb(219, 219, 237);">Національний університет "Полтавська політехніка імені Юрія Кондартюка"</font>
-        </p>
+    <section id="education">
+        <h1>Освіта</h1>
+        <p>Національний університет "Полтавська політехніка імені Юрія Кондартюка"</p>
         <p><b>01.09.2018-31.12.2023</b> <i>Освітня програма <u>"Облік і оподаткування"</u></i></p>
         <img src="./img/nupp.jpg" alt="nupp" width="700" height="400">
-    </div>
+    </section>
     <hr>
 </body>
 
