--- a/students/dunaieva_alona/02_html/index.html
+++ b/students/dunaieva_alona/02_html/index.html
@@ -9,10 +9,11 @@
 
 <body>
     <nav class="menu">
-        <a href="education.html">Education</a>
-        <a href="last-job.html">Last job</a>
-        <a href="hobby.html">Hobby</a>
+        <a href="education.html#education">Education</a>
+        <a href="last-job.html#last-job">Last job</a>
+        <a href="hobby.html#hobby">Hobby</a>
     </nav>
+    <hr>
     <img src="./img/photo-me.jpg" alt="me" width="300">
     <h1>Дунаєва Альона Сергіївна</h1>
     <h3>|телефон: <a href="tel:0688086469">0688086469</a>|<br>|email: <a href="mailto:da@gmail.com">da@gmail.com</a>|<br>|адреса: м.Полтава, вул.Собороності 68|</h3>
