--- a/students/dunaieva_alona/07_figma/index.html
+++ b/students/dunaieva_alona/07_figma/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Denis Novik</title>
 </head>
 
 <body>
@@ -42,23 +42,23 @@
             <figure>
                 <img src="./img/ps.svg" alt="ps">
                 <figcaption>Adobe Photoshop</figcaption>
-                <img src="./img/Star.svg" alt="star"> <img src="./img/Star.svg" alt="star"> <img src="./img/Star.svg" alt="star"> <img src="./img/Star.svg" alt="star"><img src="./img/Star_white.svg" alt="star-white">
             </figure>
+            <img src="./img/star.svg" alt="star"> <img src="./img/star.svg" alt="star"> <img src="./img/star.svg" alt="star"> <img src="./img/star.svg" alt="star"> <img src="./img/star_white.svg" alt="star-white">
             <figure>
                 <img src="./img/ai.svg" alt="ai">
                 <figcaption>Adobe Illustrator</figcaption>
-                <img src="./img/Star.svg" alt="star"> <img src="./img/Star.svg" alt="star"> <img src="./img/Star.svg" alt="star"><img src="./img/Star_white.svg" alt="star-white"><img src="./img/Star_white.svg" alt="star-white">
             </figure>
+            <img src="./img/star.svg" alt="star"> <img src="./img/star.svg" alt="star"> <img src="./img/star.svg" alt="star"><img src="./img/star_white.svg" alt="star-white"><img src="./img/star_white.svg" alt="star-white">
             <figure>
                 <img src="./img/ae.svg" alt="ae">
                 <figcaption>Adobe After Effects</figcaption>
-                <img src="./img/Star.svg" alt="star"> <img src="./img/Star.svg" alt="star"> <img src="./img/Star.svg" alt="star"> <img src="./img/Star.svg" alt="star"><img src="./img/Star_white.svg" alt="star-white">
             </figure>
+            <img src="./img/star.svg" alt="star"> <img src="./img/star.svg" alt="star"> <img src="./img/star.svg" alt="star"> <img src="./img/star.svg" alt="star"><img src="./img/star_white.svg" alt="star-white">
             <figure>
                 <img src="./img/figma.svg" alt="ae">
                 <figcaption>Figma</figcaption>
-                <img src="./img/Star.svg" alt="star"> <img src="./img/Star.svg" alt="star"> <img src="./img/Star.svg" alt="star"> <img src="./img/Star.svg" alt="star"><img src="./img/Star_white.svg" alt="star-white">
             </figure>
+            <img src="./img/star.svg" alt="star"> <img src="./img/star.svg" alt="star"> <img src="./img/star.svg" alt="star"> <img src="./img/star.svg" alt="star"><img src="./img/star_white.svg" alt="star-white">
         </section>
         <section class="portfolio">
             <h2>Portfolio</h2>
@@ -71,7 +71,7 @@
             </a><br>
             <a href="#">Reebok Store - Concept</a><br>
             <a href="https://www.google.com.ua/?hl=ru" target="_blank">
-                <img src="./img/reebok_web-min .png" alt="portfolio_reebok_t52">
+                <img src="./img/reebok_web-mint52.png" alt="portfolio_reebok_t52">
             </a><br>
             <a href="#">Braun Landing Page - Concept</a>
         </section>
